[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postgresql-integration-test"
dynamic = ["version", "readme"]
authors = [{name = "Jason Camp", email = "me@jason.camp"}]
license = {text = "Apache"}
description = "postgresql-integration-test is a python module that creates a temporary PostgreSQL instance to use for testing your application."
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

dependencies = [
    "psycopg2-binary >= 2.9.5",
    "pyyaml >= 6.0.1",
]

requires-python = ">=3.6"

[project.optional-dependencies]
tests = [
  "pytest >= 7.2.1",
  "pytest-env == 0.8.1",
  "pytest-cov == 4.0.0",
  "coverage >= 7.2.1",
  "mock == 5.0.1",
  "pytest-mock == 3.10.0",
  "pytest-skip-slow == 0.0.5"
]

[project.urls]
Homepage = "https://github.com/jasondcamp/postgresql-integration-test"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "postgresql_integration_test.version.__version__"}
